# pam-oauth2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  lib(2.0.0).rs  lib(3.0.0-alpha.9).rs  log.md  sample.yaml  test.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: release.yaml
config/: libpam_oidc_example.yaml  mysql-any-password  pam_unix  service_example
docker/: builder.dockerfile  percona.dockerfile  prod-percona.dockerfile
docs/: CHANGELOG-v0.1.5.md
new-simple/: Cargo.toml
new-simple/src/: lib.rs
pam-oidc/: Cargo.toml  test
pam-oidc/src/: lib.rs
tests/: test.py  test.sh  test_oidc.py
