[package]
name = "pam-oidc"
version = "0.1.0"
authors = ["guzman-raphael <raphael.h.guzman@gmail.com>"]

[dependencies]
yaml-rust = "0.4"
base64 = "0.12.0"
oauth2 = "3.0.0-alpha.9"
rand = "0.7.3"
url = "1.7.2"
reqwest = { version = "0.10.4", features = ["blocking"] }
serde_json = "1.0.52"
log = "0.4.8"
log4rs = "0.11.0"
log-panics = "2.0.0"
pamsm = { version = "0.3.3", features = ["libpam"] }

[lib]
crate-type = ["cdylib"]

