[package]
name = "pam-oidc"
version = "0.1.1"
authors = ["guzman-raphael <raphael.h.guzman@gmail.com>"]

[dependencies]
yaml-rust = "0.4.5"
base64 = "0.12.0"
oauth2 = "3.0.0-alpha.9"
rand = "0.7.3"
reqwest = { version = "0.10.4", features = ["blocking"] }
serde_json = "1.0.52"
log = "0.4.8"
log4rs = "0.11.0"
log-panics = "2.0.0"
pamsm = { version = "0.3.3", features = ["libpam"] }
pkg-version = "1.0.0"

[lib]
crate-type = ["cdylib"]

