[package]
name = "pam-oidc"
version = "0.1.4"
authors = ["guzman-raphael <raphael.h.guzman@gmail.com>"]
edition = "2021"

[dependencies]
yaml-rust = "0.4.5"
base64 = "0.13.0"
oauth2 = "4.2.3"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde_json = "1.0.83"
log = "0.4.17"
log4rs = "1.1.1"
log-panics = "2.1.0"
pamsm = { version = "0.5.2", features = ["libpam"] }
# TODO: check
openssl = { version = "0.10", features = ["vendored"] }
pkg-version = "1.0.0"

[lib]
crate-type = ["cdylib"]

